Quorum/Library/Tests/TypeChecker/Pass/ExpAssignNumObjUndefinedField.quorum
class Main
    Number num
    action Main
        num = cast(Number, undefined)
        if num = undefined
            output "passed"
        end
    end
end