Quorum/Library/Tests/TypeChecker/Fail/ExpAssignNumObjBoolean.quorum
class main
    action Main
        Number num
        num = cast(Number, true)
    end
end